--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,23 @@
-<h1>Editing Book</h1>
-<%= form_with model: @book do |f| %>
-  <label>Title</label>
-  <%= f.text_field :title %>
-  <label>Opinion</label>
-  <%= f.text_area :body %>
-  <%= f.submit "Update Book" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h1>Editing Book</h1>
+      <%= render 'layouts/error', obj: @book %>
+      <%= form_with model: @book do |f| %>
+      <div class="form-group">
+        <label>Title</label>
+        <%= f.text_field :title, class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <label>Opinion</label>
+        <%= f.text_area :body, class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update Book", class:"btn btn-success" %>
+      </div>
+      <% end %>
 
-<%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
+      <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %>
+    </div>
+  </div>
+</div>
