--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,28 +1,12 @@
-<h2>Books</h2>
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-  <tbody>
-  <% @books.each do |book| %>
-    <tr>
-      <td>
-        <%= link_to user_path(book.user.id) do %>
-          <%= image_tag book.user.get_profile_image(100,100) %>
-        <% end %>
-      </td>
-      <td>
-        <%= link_to "#{book.title}",book_path(book) %>
-      </td>
-      <td>
-        <%= book.body %>
-      </td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+<div class="container px-5 px-sm-0">
+  <%= render 'layouts/error', obj: @book %>
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'users/info_form', user: current_user , book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <%= render 'books', obj: @books %>
+    </div>
+  </div>
+</div>
+
