--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,36 +1,87 @@
-<h2>Book detail</h2>
-<table>
-  <thead>
-    <tr>
-      <th></th>
-      <th>Title</th>
-      <th>Opinion</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <%= link_to user_path(@book.user.id) do %>
-          <%= image_tag @book.user.get_profile_image(100,100) %><br>
-          <%= @book.user.name %>
-        <% end %>
-      </td>
-      <td>
-        <%= link_to book_path(@book) do %>
-          <%= @book.title %>
-        <% end %>
-      </td>
-      <td>
-        <%= @book.body %>
-      </td>
-      <% if @book.user == current_user %>
-      <td>
-        <%= link_to "Edit", edit_book_path(@book) %>
-      </td>
-      <td>
-        <%= link_to "Destroy", book_path(@book), method: :delete %>
-      </td>
+<%= flash[:notice] %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'users/info_form', user: @book.user , book: @booknew %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+            <th>Comments</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <%= link_to user_path(@book.user.id) do %>
+                <%= image_tag @book.user.get_profile_image(100,100) %><br>
+                <%= @book.user.name %>
+              <% end %>
+            </td>
+            <td>
+              <%= link_to book_path(@book) do %>
+                <%= @book.title %>
+              <% end %>
+            </td>
+            <td>
+              <%= @book.body %>
+            </td>
+            <td>
+              <%= @book.book_comments.count %>
+            </td>
+            <% if @book.user == current_user %>
+            <td>
+              <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
+            </td>
+            <td>
+              <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm"=>"本当に削除しますか", class:"btn btn-sm btn-danger" %>
+            </td>
+            <% end %>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>Comments</td>
+            <td>Name</td>
+            <td>Body</td>
+          </tr>
+          <% @book.book_comments.each do |comment| %>
+          <tr>
+            <td>
+              <%= image_tag comment.user.get_profile_image(50,50) %>
+            </td>
+            <td>
+              <%= comment.user.name %>
+            </td>
+            <td>
+              <%= comment.comment %>
+            </td>
+            <td>
+              <% if comment.user_id == current_user.id %>
+                <%= link_to "Destroy", book_book_comment_path(comment.book, comment), method: :delete, class:"btn btn-sm btn-danger" %>
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </tfoot>
+      </table>
+      <%= form_with model: [@book,@book_comment] do |f| %>
+      <div class="form-group">
+        <label>New Comment</label>
+        <%= f.text_area :comment, class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "投稿", class:"btn btn-success" %>
+      </div>
       <% end %>
-    </tr>
-  </tbody>
-</table>
+    </div>
+  </div>
+</div>
+
+
+
