--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,26 @@
-<h2>User info</h2>
-<%= form_with model: @user do |f| %>
-  <label>Name</label>
-  <%= f.text_field :name %>
-  <label>Image</label>
-  <%= f.file_field :profile_image %>
-  <label>Introduction</label>
-  <%= f.text_area :introduction %>
-  <%= f.submit "Update User" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>User info</h2>
+      <%= render 'layouts/error', obj: @user %>
+      <%= form_with model: @user do |f| %>
+      <div class="form-group">
+        <label>Name</label>
+        <%= f.text_field :name, class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <label>Image</label>
+        <%= f.file_field :profile_image, class:"form-control-file" %>
+      </div>
+      <div class="form-group">
+        <label>Introduction</label>
+        <%= f.text_area :introduction, class:"form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update User", class:"btn btn-secondary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
