--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,26 +1,11 @@
-<h2>User info</h2>
-<%= image_tag @user.get_profile_image(100,100)%>
-<table>
-  <tbody>
-    <tr>
-      <th>name</th>
-      <th><%= @user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th><%= @user.introduction %></th>
-    </tr>
-  </tbody>
-</table>
-<%= link_to "edit", edit_user_path(@user) %>
-
-<h2>New book</h2>
-<%= form_with model: @book do |f| %>
-  <label>Title</label>
-  <%= f.text_field :title %>
-  <label>Opinion</label>
-  <%= f.text_area :body %>
-  <%= f.submit "Create Book" %>
-<% end %>
-
-<
+<%= flash[:notice] %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+    <%= render 'info_form', user: @user , book: @book %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+    <%= render 'books/books', obj: @user.books %>
+    </div>
+  </div>
+</div>
