--- a/app/views/books/_books.html.erb
+++ b/app/views/books/_books.html.erb
@@ -6,6 +6,7 @@
       <th>Title</th>
       <th>Opinion</th>
       <th>Comments</th>
+      <th>Favorities</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,6 +26,17 @@
       </td>
       <td>
         <%= link_to "#{book.book_comments.count}",book_path(book) %>
+      </td>
+      <td>
+        <% if book.favorited_by?(current_user) %>
+          <%= link_to book_favorites_path(book), method: :delete, class:"text-danger" do %>
+            <p>♥ <%= book.favorites.count %></p>
+          <% end %>
+        <% else %>
+          <%= link_to book_favorites_path(book), method: :post, class:"text-secondary" do %>
+            <p>♥ <%= book.favorites.count %></p>
+          <% end %>
+        <% end %>
       </td>
     </tr>
   <% end %>
