--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,6 +13,7 @@
             <th>Title</th>
             <th>Opinion</th>
             <th>Comments</th>
+            <th>Favorities</th>
           </tr>
         </thead>
         <tbody>
@@ -34,11 +35,20 @@
             <td>
               <%= @book.book_comments.count %>
             </td>
+            <td>
+              <% if @book.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(@book), method: :delete, class:"text-danger" do %>
+                  <p>♥ <%= @book.favorites.count %></p>
+                <% end %>
+              <% else %>
+                <%= link_to book_favorites_path(@book), method: :post, class:"text-secondary" do %>
+                  <p>♥ <%= @book.favorites.count %></p>
+                <% end %>
+              <% end %>
+            </td>
             <% if @book.user == current_user %>
             <td>
               <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
-            </td>
-            <td>
               <%= link_to "Destroy", book_path(@book), method: :delete, "data-confirm"=>"本当に削除しますか", class:"btn btn-sm btn-danger" %>
             </td>
             <% end %>
