--- a/app/views/relationships/_follow.html.erb
+++ b/app/views/relationships/_follow.html.erb
@@ -1,20 +1,16 @@
-<div class="container px-5 px-sm-0">
-  <div class="row">
-    <div class="col-md-3">
-      <%= render 'info_form', user: current_user , book: @book %>
-    </div>
-    <div class="col-md-8 offset-md-1">
-      <h2>Users</h2>
+    <% if users.count == 0 %>
+      <p id="notice"></p>
+      <p>ユーザーはいません</p>
+    <% else %>
       <table class="table">
         <thead>
           <tr>
             <th>image</th>
             <th>name</th>
-            <th colspan="3"></th>
           </tr>
         </thead>
         <tbody>
-        <% @users.each do |user| %>
+          <% users.each do |user| %>
           <tr>
             <td><%= image_tag user.get_profile_image(100,100) %></td>
             <td><%= user.name %></td>
@@ -29,13 +25,9 @@
                 <% end %>
               <% end %>
             </td>
-            <td><%= link_to "show",user_path(user) %></td>
+            <td><%= link_to "Show", user_path(user) %></td>
           </tr>
-        <% end %>
+          <% end %>
         </tbody>
       </table>
-    </div>
-  </div>
-</div>
-
-
+    <% end %>
