--- a/app/views/users/_info_form.html.erb
+++ b/app/views/users/_info_form.html.erb
@@ -10,8 +10,25 @@
       <th>introduction</th>
       <th><%= user.introduction %></th>
     </tr>
+    <tr>
+      <th>follows</th>
+      <th><%= link_to user.followings.count, user_followings_path(user) %></th>
+    </tr>
+    <tr>
+      <th>follower</th>
+      <th><%= link_to user.follower.count, user_followers_path(user) %></th>
+    </tr>
   </tbody>
 </table>
+<div class="form-group">
+  <% unless user.id == current_user.id %>
+    <% if current_user.following?(user) %>
+      <%= link_to "フォロー外す", user_relationships_path(user), method: :delete, class:"btn btn-info" %>
+    <% else %>
+      <%= link_to "フォローする", user_relationships_path(user), method: :post, class:"btn btn-secondary"%>
+    <% end %>
+  <% end %>
+</div>
 <div class="row">
 <%= link_to edit_user_path(user), class:"btn btn-outline-secondary btn-block" do %>
   <i class="fas fa-user-cog"></i>
