--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,9 @@
 <%= flash[:notice] %>
 <div class="container px-5 px-sm-0">
   <div class="row">
+    <%= render 'layouts/search' %>
+  </div>
+  <div class="row">
     <div class="col-md-3">
     <%= render 'info_form', user: @user , book: @book %>
     </div>
